# mediarc

./: Makefile  Makefile.am  ProjectHome.md  README  ScreenShots.md  TODO  autogen.sh  config  configure.ac
branches/: releases
branches/0.1/: README
branches/0.1/drivers/: Makefile.am  bindings.xml
branches/0.1/etc/: mediarc.xml
branches/0.1/icons/: Makefile.am
branches/0.1/mediarc/interface/: menu.py  tv.py
branches/0.1/mediarc/remotes/serial/: command.py  driver.py
branches/0.1/mediarc/remotes/serial/olevia/: __init__.py  tv432V.py
branches/0.1/misc/: Makefile.am  svnignore
config/: bindings.xml
etc/: Makefile.am  config-template.xml
mediarc/: __init__.py  ctl.py
mediarc/drivers/serial/olevia/: tv432V.py
mediarc/interface/: __init__.py  bindings.py  menu.py  remote.py  statusicon.py  tv.py  window.py
mediarc/remote/: __init__.py
mediarc/remotes/: __init__.py  alsa.py  lirc.py
mediarc/remotes/serial/: __init__.py  driver.py
misc/: mediarc.desktop  svnignore  svnignore-update.sh
share/config/: bindings.xml
share/drivers/serial/olevia/: 432V.xml  tv432V.xml
share/themes/MediaRC/gtk-2.0/: .swp
themes/: Makefile.am
themes/MediaRC/: README  README.tenebrific
themes/MediaRC/gtk-2.0/: gtkrc  iconrc
trunk/: Makefile.am  README  TODO  config  configure.ac  svnignore
trunk/config/: Makefile.am
trunk/icons/: Makefile.am
trunk/mediarc/: Makefile.am  __init__.py  ctl.py  mydom.py
trunk/mediarc/drivers/: alsa.py
trunk/mediarc/interface/: __init__.py  about.py  bindings.py  menu.py  remote.py  tv.py  window.py
trunk/mediarc/remotes/: alsa.py  lirc.py
trunk/mediarc/remotes/serial/: __init__.py  command.py  driver.py
trunk/misc/: svnignore-update.sh
trunk/share/drivers/: lirc.xml
trunk/trunk/mediarc/: mydom.py
trunk/trunk/mediarc/remotes/: alsa.py
wiki/: ScreenShots.wiki
