SUBDIRS = 

ACLOCAL_AMFLAGS = -I ../m4

mediarcdir = $(pkgdatadir)/themes/MediaRC
mediarc_DATA = $(srcdir)/MediaRC/README*
gtkdir = $(pkgdatadir)/themes/MediaRC/gtk-2.0
gtk_DATA = $(srcdir)/MediaRC/gtk-2.0/*

EXTRA_DIST = 
DISTCLEANFILES = 
MAINTAINERCLEANFILES = Makefile.in Makefile
MAINTAINERCLEANDIRS =
