SUBDIRS = 

ACLOCAL_AMFLAGS = -I ../m4

iconsdir = $(pkgdatadir)/icons
icons_DATA = $(srcdir)/*.png
largedir = $(pkgdatadir)/icons/large
large_DATA = $(srcdir)/large/*.png
smalldir = $(pkgdatadir)/icons/small
small_DATA = $(srcdir)/small/*.png

EXTRA_DIST = 
DISTCLEANFILES = 
MAINTAINERCLEANFILES = Makefile.in Makefile
MAINTAINERCLEANDIRS =
