SUBDIRS = 

ACLOCAL_AMFLAGS = -I ../m4

driversdir = $(pkgdatadir)/drivers
drivers_DATA = $(srcdir)/*.xml
#serialdir =  $(pkgdatadir)/drivers/serial
#serial_DATA = $(srcdir)/drivers/serial/*.xml
oleviadir =  $(pkgdatadir)/drivers/serial/olevia
olevia_DATA = $(srcdir)/serial/olevia/*.xml

EXTRA_DIST = 
DISTCLEANFILES = 
MAINTAINERCLEANFILES = Makefile.in Makefile
MAINTAINERCLEANDIRS =
